EDIT: docker-compose.yml and Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,28 +4,27 @@ services:
   api:
     build:
       dockerfile: Dockerfile
-      context: ./backend
+      context: ./
       target: development
     volumes:
-      - ./api:/thomas/src/app
-      - /thomas/src/app/node_modules/
-    command: npm run start:debug
+      - ./:/app
+    command: yarn start
     depends_on:
       - postgres
     environment:
       DATABASE_URL: postgres://user:password@postgres:5432/db
       NODE_ENV: development
       JWT_SECRET: hard_to_guess_secret_123
-      PORT: 3000
+      PORT: 5001
     ports:
-      - 3000:3000
+      - 5001:5001
       - 9229:9229
 
   postgres:
-    image: postgres:10.4
+    image: postgres:13
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: db
     ports:
-      - 35000:5432
+      - 5432:5432
