--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 version: "3.8"
 
 services:
-  api:
-    container_name: api
-    restart: unless-stopped
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ./src:/app/src
-      - ./node_modules:/app/node_modules
-    environment:
-      DATABASE_URL: postgres://user:password@postgres:5432/db
-      NODE_ENV: development
-      JWT_SECRET: hard_to_guess_secret_123
-      PORT: 5001
-    ports:
-      - "5001:5001"
-    depends_on:
-      - db
-
   postgres:
     image: postgres:13
     environment:
@@ -28,3 +9,29 @@ services:
       POSTGRES_DB: db
     ports:
       - 5432:5432
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+
+  api:
+    container_name: api
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/app
+    environment:
+      DB_URL: postgres://user:password@postgres:5432/db
+      NODE_ENV: development
+      JWT_SECRET: hard_to_guess_secret_123
+      PORT: 5001
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+    ports:
+      - "5001:5001"
+    depends_on:
+      - postgres
+      - redis
