--- a/package.json
+++ b/package.json
@@ -30,42 +30,44 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/swagger": "^6.1.2",
+    "@nestjs/testing": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^9.0.11",
     "@types/cache-manager": "^4.0.2",
-    "bcrypt": "^5.0.1",
-    "cache-manager": "^4.1.0",
-    "cache-manager-redis-store": "^2.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "nestjs-typeorm-paginate": "^4.0.2",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "bcrypt": "^5.0.1",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "nestjs-typeorm-paginate": "^4.0.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
     "prettier": "^2.3.2",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
+    "swagger-ui-express": "^4.5.0",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "typeorm": "^0.2.41",
     "typescript": "^4.3.5"
   },
   "jest": {
