--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,16 @@ networks:
     name: 'myness_nginx'
   myness_back:
 
+volumes:
+  postgres-data:
+
 services:
   postgres:
     image: postgres:13
     networks:
       myness_back:
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
